--- a/GoogleMapDemo.xcodeproj/xcshareddata/xcschemes/GoogleMapDemo.xcscheme
+++ b/GoogleMapDemo.xcodeproj/xcshareddata/xcschemes/GoogleMapDemo.xcscheme
@@ -56,7 +56,7 @@
       </LocationScenarioReference>
    </LaunchAction>
    <ProfileAction
-      buildConfiguration = "Release"
+      buildConfiguration = "Debug"
       shouldUseLaunchSchemeArgsEnv = "YES"
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
