migrate to Swift

--- a/GoogleMapDemoSwift/Info.plist
+++ b/GoogleMapDemoSwift/Info.plist
@@ -21,9 +21,11 @@
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
-	<string>we wants use your location to work</string>
+	<string>we want use your location</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>we want use your location</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>we wants use your location to work</string>
+	<string>we want use your location</string>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
 	<key>UIBackgroundModes</key>
