--- a/GoogleMapDemo.xcodeproj/xcshareddata/xcschemes/GoogleMapDemoSwift.xcscheme
+++ b/GoogleMapDemo.xcodeproj/xcshareddata/xcschemes/GoogleMapDemoSwift.xcscheme
@@ -51,8 +51,8 @@
          </BuildableReference>
       </BuildableProductRunnable>
       <LocationScenarioReference
-         identifier = "../GPX files/11-10-2020-1937.gpx"
-         referenceType = "0">
+         identifier = "com.apple.dt.IDEFoundation.CurrentLocationScenarioIdentifier"
+         referenceType = "1">
       </LocationScenarioReference>
    </LaunchAction>
    <ProfileAction
